--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.1",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "node-fetch": "^2.7.0"
   }
 }
